# services

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: running_models.md
inference/: .gcloudignore  Dockerfile  README.md  app.py  base.py  cloudbuild.yaml  evaluation.py  inference_service.py  model_storage.py  providers.py  pyproject.toml  schema.py  storage.py  utils.py
infrastructure/: README.md  gemma-finetuner-api-v3.yaml  main.tf  terraform.tfvars  terraform.tfvars.example
infrastructure/api-config/: gemma-finetuner-api-v4.yaml
jobs/training-job/: Dockerfile  README.md  base.py  cloudbuild.yaml  job_manager.py  main.py  model_storage.py  providers.py  pyproject.toml  rewards.py  schema.py  storage.py  training_service.py  utils.py
preprocessing/: .gcloudignore  Dockerfile  README.md  app.py  cloudbuild.yaml  config.py  data_preprocessor.py  dataset_handler.py  dataset_tracker.py  pyproject.toml  schema.py  storage_manager.py
preprocessing/augmentation/: README.md  __init__.py  augmentation.md  augmentation_manager.py  eda.py  gemini_synthesizer.py  text_augmentor.py
preprocessing/services/: __init__.py  dataset_analyzer.py  dataset_handler.py  dataset_loader.py  dataset_service.py  dataset_uploader.py  format_converter.py
preprocessing/storage/: __init__.py  base.py  gcs_storage.py  local_storage.py
training/: .dockerignore  .gcloudignore  Dockerfile  README.md  app.py  auth.py  cloudbuild.yaml  job_manager.py  metrics_logger.py  pyproject.toml  schema.py
training/services/: __init__.py  inference_service.py  model_storage.py  training_service.py
