[project]
name = "gemma3-inference"
version = "0.1.0"
description = "Infernece for trained adapters"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.6.0",
    "accelerate==1.4.0",
    "google-cloud-storage==2.10.0",
    "google-cloud-firestore>=2.11.0",
    "firebase-admin>=6.0.0",
    "bitsandbytes==0.45.3",
    "datasets>=3.4.1",
    "evaluate==0.4.3",
    "huggingface-hub>=0.32.4",
    "peft==0.14.0",
    "transformers>=4.50.0",
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "unsloth>=2025.8.1",
    "unsloth_zoo>=2025.8.1",
    "xformers>=0.0.29.post3",
    "nltk==3.9.1",
    "rouge_score==0.1.2",
    "bert_score==0.3.13",
    "scikit-learn==1.7.1"
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124" },
]
torchvision = [
  { index = "pytorch-cu124" },
]
torchaudio = [
  { index = "pytorch-cu124" },
]
