[project]
name = "preprocessing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets==3.3.2",
    "flask>=3.1.1",
    "google-cloud-storage>=3.1.0",
    "gunicorn>=23.0.0",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "pillow>=11.2.1",
]
