[project]
name = "preprocessing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets==2.14.6",
    "fastapi==0.104.1",
    "google-cloud-storage==2.10.0",
    "pandas==2.1.3",
    "pydantic==2.5.0",
    "python-multipart==0.0.6",
    "uvicorn[standard]==0.24.0",
    "werkzeug==3.0.1",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "sentencepiece>=0.1.99",
    "nltk>=3.8",
    "sacremoses>=0.1.1",
    "google-genai>=1.4.0",
    "python-dotenv>=1.0.0",
]
