[project]
name = "gemma3-training"
version = "0.1.0"
description = "Trigger train jobs and monitor status"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-storage==2.10.0",
    "google-cloud-firestore>=2.11.0",
    "google-cloud-run>=0.10.18",
    "setuptools",
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0"
]
