[project]
name = "gemma3-training-job"
version = "0.1.0"
description = "Training job"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.6.0",
    "accelerate==1.4.0",
    "google-cloud-storage==2.10.0",
    "google-cloud-firestore>=2.11.0",
    "bitsandbytes==0.45.3",
    "datasets>=3.4.1",
    "huggingface-hub>=0.32.4",
    "peft==0.14.0",
    "transformers>=4.50.0",
    "trl==0.15.2",
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "wandb",
    "unsloth==2025.6.12",
    "unsloth_zoo==2025.6.8",
    "xformers==0.0.29.post3",
    "pillow>=10.0.0",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124" },
]
torchvision = [
  { index = "pytorch-cu124" },
]
torchaudio = [
  { index = "pytorch-cu124" },
]
